# factorisation-machine-poc

./: .gitignore  README.md  pyproject.toml
data/: dish.csv  dish_ingredient.csv  ingredients.csv  user.csv  user_ingredient.csv
src/: main.py
src/data/: dish_ingredient_dataset.py  ingredient_user_dataset.py
src/model/: factorisation_machine.py  gce_layer.py
src/scripts/: preprocessing.py  preprocessing_v2.py  train.py
src/utils/: metrics.py
